--- a/Exam/package.json
+++ b/Exam/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongoose": "^4.12.4",
+    "npm-v": "^1.0.0"
+  }
 }
