--- a/client/project/package.json
+++ b/client/project/package.json
@@ -15,7 +15,9 @@
     "bluebird": "^3.4.1",
     "bootstrap": "^4.0.0-beta.2",
     "cors": "^2.8.4",
-    "moment": "^2.19.2",
+    "fetch-client": "0.0.1",
+    "flatpickr": "^4.1.4",
+    "moment": "^2.19.3",
     "regenerator-runtime": "^0.11.0",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest"
