--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "express": "^4.15.5",
     "grunt": "^1.0.1",
     "jsonwebtoken": "^8.1.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
